loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:4: error: '<-' expected but integer literal found.
  for (i 1<-4){
         ^LoopCourseForest:24: error: illegal start of simple expression
} 
^